Basic working project

--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 </head>
 <body>
     <div id = 'calculator'>
-        <div id = 'screen'>screen</div>
+        <div id = 'screen'>
+            <div id = 'numbers'></div>
+            <div id = 'icons'>+ - / x</div>
+        </div>
         <div id = 'buttons'>
                 <div id = 'row1'>
                     <button id = 'seven'>7</button>
                     <button id = 'eight'>8</button>
                     <button id = 'nine'>9</button>       
-                    <button id = 'clear'>Clear</button>
+                    <button id = 'clear'>Clr</button>
+                    <button id = 'del'>Del</button>
                 </div>
                     
                 <div id = 'row2'>
@@ -24,7 +28,7 @@
                     <button id = 'five'>5</button>
                     <button id = 'six'>6</button>
                     <button id = 'plus'>+</button>
-                    <button id = 'minus'>-</button>
+                    <button id = 'minus'>&ndash;</button>
                 </div>  
                     
                 <div id = 'row3'>
