Added icon functionality and refined css

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div id = 'calculator'>
-        <div id = 'screen'>
-            <div id = 'numbers'></div>
-            <div id = 'icons'>+ - / x</div>
+    <div class = 'calculator'>
+        <div class = 'screen'>
+                <div id = 'numbers'></div>
+                <div id = 'memory'></div>
+            <div class = 'icons'>
+                <div id = 'iconplus'>+</div>
+                <div id = 'iconminus'>-</div>
+                <div id = 'icondivide'>/</div>
+                <div id = 'iconmultiply'>x</div>
+             </div>   
         </div>
         <div id = 'buttons'>
                 <div id = 'row1'>
