Add signature with animation and switch pulse

--- a/index.html
+++ b/index.html
@@ -61,5 +61,8 @@
                  </div>   
         </div>
     </div>
+    <div class = 'footer'>
+        <div class = 'signature'>doug mattern 2021</div>
+    </div>
 </body>
 </html>
