fix dark mode switch

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class = 'darkmode'>dark mode</div>
         <label class = "switch">
             <div class = 'toggle'> 
-                <input type = "checkbox"/>
+                <input id = "input", type = "checkbox"/>
                 <span class = "slider round"></span>
             </div>
         </label>
@@ -62,7 +62,7 @@
         </div>
     </div>
     <div class = 'footer'>
-        <div class = 'signature'>doug mattern 2021</div>
+        <div class = 'signature'>doug mattern 2023</div>
     </div>
 </body>
 </html>
